# finance-flow-ai

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
src/: __main__.py  dataset.py  dpo.py  evaluate.py  inference.py  model.py  preprocess.py  push.py  train.py  ui.py  utils.py
src/config/: default.py  qwen25_500m.py  smollm2_360m.py
